fix file persistance and edges direction