@@ -1,6 +1,8 @@
 package com.horstmann.violet.framework.file.persistence;
 
 import java.awt.geom.Point2D;
+import java.awt.geom.Rectangle2D;
+import java.awt.geom.RoundRectangle2D;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -22,6 +24,7 @@ import com.horstmann.violet.product.diagram.abstracts.property.BentStyle;
 import com.horstmann.violet.product.diagram.abstracts.property.LineStyle;
 import com.thoughtworks.xstream.XStream;
 import com.thoughtworks.xstream.io.xml.DomDriver;
+import com.thoughtworks.xstream.security.AnyTypePermission;
 
 @ManagedBean(registeredManually=true)
 public class XStreamBasedPersistenceService implements IFilePersistenceService {
@@ -64,9 +67,13 @@ public class XStreamBasedPersistenceService implements IFilePersistenceService {
 	private XStream getConfiguredXStream(XStream xStream) {
 		xStream.autodetectAnnotations(true);
 		xStream.setMode(XStream.ID_REFERENCES);
-		xStream.useAttributeFor(Point2D.Double.class, "x");
-		xStream.useAttributeFor(Point2D.Double.class, "y");
-		xStream.alias("Point2D.Double", Point2D.Double.class);
+		xStream.addPermission(AnyTypePermission.ANY);
+		xStream.alias("Point", Point2D.Double.class);
+		xStream.alias("Rectangle", Rectangle2D.Double.class);
+		xStream.alias("RoundRectangle", RoundRectangle2D.Double.class);
+        xStream.registerConverter(new Point2DConverter());
+        xStream.registerConverter(new Rectangle2DConverter());
+        xStream.registerConverter(new RoundRectangle2DConverter());
 		xStream.addImmutableType(ArrowHead.class);
         xStream.addImmutableType(LineStyle.class);
         xStream.addImmutableType(BentStyle.class);
@@ -75,7 +82,7 @@ public class XStreamBasedPersistenceService implements IFilePersistenceService {
 			Class<? extends IGraph> graphClass = aPlugin.getGraphClass();
 			xStream.alias(graphClass.getSimpleName(), graphClass);
 			try {
-				IGraph aDummyGraph = graphClass.newInstance();
+				IGraph aDummyGraph = graphClass.getDeclaredConstructor().newInstance();
 				List<IEdge> edgePrototypes = aDummyGraph.getEdgePrototypes();
 				List<INode> nodePrototypes = aDummyGraph.getNodePrototypes();
 				for (IEdge anEdgePrototype : edgePrototypes) {
